--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-.App {
+/* .App {
   text-align: center;
+} */
+.planets-list {
+  font-size: 14px;
 }
-
+.App {
+  padding-left: 50px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
